--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -1,19 +1,17 @@
 % Encoding: windows-1252
 
 @Misc{ashford2015,
-  author = {Ashford, Warwick},
-  title =  {Researchers raise privacy concerns about Bluetooth Low Energy devices},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {Researchers raise privacy concerns about Bluetooth Low Energy devices}
+  author =       {Ashford, Warwick},
+  title =        {Researchers raise privacy concerns about Bluetooth Low Energy devices},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.computerweekly.com/news/4500246790/Researchers-raise-privacy-concerns-about-Bluetooth-Low-Energy-devices}},
+  year =         {2015}
 }
 
 @Misc{bbcnews2015,
-  author = {BBC News},
-  title =  {China imposes smartwatch and wearable tech army ban},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://www.bbc.com/news/technology-32718266}
+  author =       {BBC News},
+  title =        {China imposes smartwatch and wearable tech army ban},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.bbc.com/news/technology-32718266}},
+  year =         {2015}
 }
 
 @TechReport{clapper2016,
@@ -72,19 +70,17 @@
 }
 
 @Misc{goodin2015,
-  author = {Goodin, Dan},
-  title =  {9 baby monitors wide open to hacks that expose users’ most private moments},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://arstechnica.com/security/2015/09/9-baby-monitors-wide-open-to-hacks-that-expose-users-most-private-moments/}
+  author =       {Goodin, Dan},
+  title =        {9 baby monitors wide open to hacks that expose users’ most private moments},
+  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2015/09/9-baby-monitors-wide-open-to-hacks-that-expose-users-most-private-moments/} },
+  year =         {2015}
 }
 
 @Misc{greenberg2015,
-  author = {Greenberg, Andy},
-  title =  {Hackers Remotely Kill a Jeep on the Highway - With Me in It},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {https://www.wired.com/2015/07/hackers-remotely-kill-jeep-highway/}
+  author =       {Greenberg, Andy},
+  title =        {Hackers Remotely Kill a Jeep on the Highway - With Me in It},
+  howpublished = {Retrieved March 19, 2016, from \url{https://www.wired.com/2015/07/hackers-remotely-kill-jeep-highway/}},
+  year =         {2015}
 }
 
 @Article{haartsen2000bluetooth,
@@ -100,19 +96,17 @@
 }
 
 @Misc{hirsch2015,
-  author = {Hirsch, Jerry},
-  title =  {Hackers can now hitch a ride on car computers},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://www.latimes.com/business/autos/la-fi-hy-car-hacking-20150914-story.html}
+  author =       {Hirsch, Jerry},
+  title =        {Hackers can now hitch a ride on car computers},
+  howpublished = {Retrieved March 19, 2016, from \url{http://www.latimes.com/business/autos/la-fi-hy-car-hacking-20150914-story.html} },
+  year =         {2015}
 }
 
 @Misc{iyer2015,
-  author = {Iyer, Kavita},
-  title =  {Smartwatches vulnerable to hacking says Researchers},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://www.techworm.net/2015/09/smartwatches-vulnerable-to-hacking-says-researchers.html}
+  author =       {Iyer, Kavita},
+  title =        {Smartwatches vulnerable to hacking says Researchers},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.techworm.net/2015/09/smartwatches-vulnerable-to-hacking-says-researchers.html}},
+  year =         {2015}
 }
 
 @Article{kamath2010measuring,
@@ -123,11 +117,10 @@
 }
 
 @Misc{kessler2015,
-  author = {Kessler, Aaron M.},
-  title =  {Fiat Chrysler Issues Recall Over Hacking},
-  year =   {2015},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://www.nytimes.com/2015/07/25/business/fiat-chrysler-recalls-1-4-million-vehicles-to-fix-hacking-issue.html}
+  author =       {Kessler, Aaron M.},
+  title =        {Fiat Chrysler Issues Recall Over Hacking},
+  howpublished = {Retrieved March 19, 2016, from \url{http://www.nytimes.com/2015/07/25/business/fiat-chrysler-recalls-1-4-million-vehicles-to-fix-hacking-issue.html} },
+  year =         {2015}
 }
 
 @Article{martelli2014bluetooth,
@@ -151,19 +144,17 @@
 }
 
 @Misc{porup2016,
-  author = {Porup, J.M.},
-  title =  {"Internet of Things" security is hilariously broken and getting worse},
-  year =   {2016},
-  note =   {[Online; accessed 19-March-2016]},
-  url =    {http://arstechnica.com/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}
+  author =       {Porup, J.M.},
+  title =        {"Internet of Things" security is hilariously broken and getting worse},
+  howpublished = {Retrieved March 19, 2016, from \url{http://arstechnica.com/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/} },
+  year =         {2016}
 }
 
 @Misc{porup20162,
   author =       {Porup, J.M.},
   title =        {How to search the Internet of Things for photos of sleeping babies},
-  howpublished = {\url{http://arstechnica.co.uk/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}},
-  year =         {2015},
-  note =         {[Online; accessed 19-March-2016]}
+  howpublished = {Retrieved March 18, 2016, from \url{http://arstechnica.co.uk/security/2016/01/how-to-search-the-internet-of-things-for-photos-of-sleeping-babies/}},
+  year =         {2015}
 }
 
 @InProceedings{siekkinen2012low,
