--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -24,7 +24,8 @@
 \usepackage{eurosym}         % Euro-symbool €
 \usepackage{geometry}
 \usepackage{graphicx}        % Invoegen van tekeningen
-\usepackage[pdftex,bookmarks=true]{hyperref}
+\usepackage[hyphens]{url}
+\usepackage[pdftex,bookmarks=true,hidelinks]{hyperref}
                              % PDF krijgt klikbare links & verwijzingen,
                              %  inhoudstafel
 \usepackage{epigraph}
