Add sources and adjust some parts

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -8,10 +8,17 @@
 }
 
 @Misc{bbcnews2015,
-  author =       {BBC News},
+  author =       {{BBC News}},
   title =        {China imposes smartwatch and wearable tech army ban},
   howpublished = {Retrieved March 18, 2016, from \url{http://www.bbc.com/news/technology-32718266}},
   year =         {2015}
+}
+
+@Misc{bluetoothsig2016,
+  author =       {{Bluetooth SIG}},
+  title =        {Our history},
+  howpublished = {Retrieved May 1, 2016, from \url{https://www.bluetooth.com/media/our-history}},
+  year =         {2016}
 }
 
 @TechReport{clapper2016,
@@ -20,6 +27,13 @@
   institution = {DTIC Document},
   year =        {2016},
   url =         {http://www.intelligence.senate.gov/sites/default/files/wwt2016.pdf}
+}
+
+@Misc{colitti2014,
+  author =       {Colitti, Walter},
+  title =        {Why ZigBee has failed in IoT interoperability},
+  howpublished = {Retrieved May 1, 2016, from \url{http://www.waltercolitti.consulting/analysis/why-zigbee-has-failed-in-iot-interoperability/}},
+  year =         {2014}
 }
 
 
@@ -31,6 +45,27 @@
   Number                   = {8},
   Pages                    = {50--56},
   Volume                   = {52}
+}
+
+@InProceedings{faragher2014analysis,
+  author =    {Faragher, Ramsey and Harle, R},
+  title =     {An analysis of the accuracy of bluetooth low energy for indoor positioning applications},
+  booktitle = {Proceedings of the 27th International Technical Meeting of the Satellite Division of the Institute of Navigation (ION GNSS+'14)},
+  year =      {2014}
+}
+
+@Misc{gartner2014,
+  author =       {Rivera, Janessa and {van der Meulen}, Rob},
+  title =        {Gartner's 2014 Hype Cycle for Emerging Technologies Maps the Journey to Digital Business},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/2819918}},
+  year =         {2014}
+}
+
+@Misc{gartner2015,
+  author =       {{van der Meulen}, Rob},
+  title =        {Gartner Says 6.4 Billion Connected "Things" Will Be in Use in 2016, Up 30 Percent From 2015},
+  howpublished = {Retrieved March 18, 2016, from \url{http://www.gartner.com/newsroom/id/3165317}},
+  year =         {2015}
 }
 
 @Article{gomez2010wireless,
@@ -83,6 +118,13 @@
   year =         {2015}
 }
 
+@Book{gupta2013inside,
+  title =     {Inside Bluetooth low energy},
+  publisher = {Artech house},
+  year =      {2013},
+  author =    {Gupta, Naresh}
+}
+
 @Article{haartsen2000bluetooth,
   Title                    = {The Bluetooth radio system},
   Author                   = {Haartsen, Jaap C},
@@ -93,6 +135,13 @@
   Volume                   = {7},
 
   Publisher                = {IEEE}
+}
+
+@Book{heydon2012bluetooth,
+  title =     {Bluetooth low energy: the developer's handbook},
+  publisher = {Prentice Hall},
+  year =      {2012},
+  author =    {Heydon, Robin}
 }
 
 @Misc{hirsch2015,
@@ -129,6 +178,13 @@
   Journal                  = {University of Bologna},
   Year                     = {2014},
   Volume                   = {25}
+}
+
+@Misc{nokia2006,
+  author =       {Nokia},
+  title =        {Nokia introduces Wibree technology as open industry initiative},
+  howpublished = {Retrieved May 1, 2016, from \url{http://company.nokia.com/en/news/press-releases/2006/10/03/nokia-introduces-wibree-technology-as-open-industry-initiative}},
+  year =         {2006}
 }
 
 @Article{omre2010bluetooth,
@@ -177,7 +233,7 @@
   title =     {Getting Started with Bluetooth Low Energy},
   publisher = {O'Reilly Media, Inc.},
   year =      {2014},
-  author =    {Townsend, Kevin and Cufì, Carles and Akiba and Davidson, Robert},
+  author =    {Townsend, Kevin and Cuf\`{i}, Carles and Akiba and Davidson, Robert},
   editor =    {Sawyer, Brian and Loukides, Mike},
   owner =     {Jan},
   timestamp = {2016.02.02}
