Some minor adjustments to URLs and capitalisation

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -220,7 +220,7 @@ First of all, the problem statement will be discussed where a quick sketch will 
 
 \subsection{Problem statement}
 \label{subsec:problemstatement}
-At the time of writing, there are already a lot of Bluetooth enabled products on the technology market. With the new Bluetooth Low Energy specification, Bluetooth is reaching out even further to products like socks\footnote{http://www.sensoriafitness.com/}, shoes\footnote{https://secure-nikeplus.nike.com/plus/products/basketball}, fitness bands\footnote{https://www.fitbit.com/} and more are being added to the list every day. The problem with these products is that in a lot of cases, the products only synchronize with a smartphone. Some manufacturers extend this connectivity by occasionally synchronizing the data the smartphone captures to their own proprietary cloud, where the data can be analysed by both the company and the consumer. Most of the time, this is where the data cycle stops and it can't be further accessed by other parties, this is known as a closed loop system. In some cases, developers can still access the data with an API that communicates with the cloud service of the manufacturer, but this doesn't give any access to the raw sensor values and doesn't allow real-time data transfer.
+At the time of writing, there are already a lot of Bluetooth enabled products on the technology market. With the new Bluetooth Low Energy specification, Bluetooth is reaching out even further to products like socks\footnote{\url{http://www.sensoriafitness.com/}}, shoes\footnote{\url{https://secure-nikeplus.nike.com/plus/products/basketball}}, fitness bands\footnote{\url{https://www.fitbit.com/}} and more are being added to the list every day. The problem with these products is that in a lot of cases, the products only synchronize with a smartphone. Some manufacturers extend this connectivity by occasionally synchronizing the data the smartphone captures to their own proprietary cloud, where the data can be analysed by both the company and the consumer. Most of the time, this is where the data cycle stops and it can't be further accessed by other parties, this is known as a closed loop system. In some cases, developers can still access the data with an API that communicates with the cloud service of the manufacturer, but this doesn't give any access to the raw sensor values and doesn't allow real-time data transfer.
 
 One of the use cases where this could be an important requirement is in elderly homes. For instance, when making a monitoring system to check if elderly people have fallen or something else is going wrong, it is not acceptable to only receive data every 15 minutes because by that time it might be too late. When building a system like this, it can also be handy to have a central service where all of the raw data is collected instead of containing it in separate closed loops for every system. An example of a closed system versus open system can be found in figure \ref{fig:networkloops}.
 
@@ -240,7 +240,7 @@ There are a couple of questions that can be asked when combining Bluetooth Low E
 The main goals this thesis tries to fulfil are in essence very simple, but of course there are always some other questions that arise when looking at the big picture. These questions can be categorized as following, the questions in bold being the main research questions and the ones in plain text being auxiliary questions:
 \begin{itemize}
 	\item{\textbf{Can Bluetooth Low Energy wearables be used in an Internet of Things cloud infrastructure?}}
-	\item{\textbf{Is is possible to use a smartphone as gateway to communicate with the AllThingsTalk cloud in real-time?}}
+	\item{\textbf{Is is possible to use a smartphone as gateway to communicate with the AllThingsTalk developer Cloud in real-time?}}
 	\item{\textbf{Is there a possible use case where Bluetooth Low Energy wearables can provide an added value in an Internet of Things project?}}
 	\item{What is Bluetooth Low Energy?}
 	\item{What is the difference between Bluetooth Low Energy and Bluetooth Classic?}
@@ -256,7 +256,7 @@ AllThingsTalk was founded in July 2013 and their main objective is to `Make IoT 
 
 \subsection{History}
 \label{subsec:atthistory}
-AllThingsTalk has come a long way since the start of the company. They've received multiple Research \& Innovation grants from the government, the first being in September 2013 for building an open IoT platform: the AllThingsTalk Cloud. The second grant was received in May 2014, where the goal was to implement pattern recognition in their platform in order to help elderly people stay in their homes for a longer time. A third grant was acquired in February 2015, which was responsible for adding machine learning components to the platform.
+AllThingsTalk has come a long way since the start of the company. They've received multiple Research \& Innovation grants from the government, the first being in September 2013 for building an open IoT platform: the AllThingsTalk developer Cloud. The second grant was received in May 2014, where the goal was to implement pattern recognition in their platform in order to help elderly people stay in their homes for a longer time. A third grant was acquired in February 2015, which was responsible for adding machine learning components to the platform.
 
 Furthermore, they've hit some other major milestones throughout the years. In November 2014 they launched the first set of Rapid Development Kits for Internet of Things, where they added the Intel Rapid Development Kit in April 2015 and the LoRa Rapid Development Kit in November 2015. Other milestones include Internet of Things hackathons, the launch of IOTOPIA.be - a platform to introduce children in secondary schools to Internet of Things - and a LoRa partnership with Proximus, one of the largest telecommunications companies in Belgium.
 
@@ -469,7 +469,7 @@ If the device can't fit enough data into the advertising packet, there is a seco
 
 \subsection{Data format}
 \label{subsec:advdataformat}
-As discussed in subsection \ref{subsec:controllerLL}, each packet, be it advertising or data, has the same maximum length and structure but the data part of the packet is filled depending on the type of packet that is sent. The data in an advertising packet is filled with AD Types which take up one byte, and the data for that AD Type which is of variable length. An incomplete list of these AD Types together with their definition is found below. A full list of AD Types together with their descriptions can be found on the Bluetooth website\footnote{https://www.bluetooth.com/specifications/assigned-numbers/generic-access-profile} and Bluetooth Core Specification.
+As discussed in subsection \ref{subsec:controllerLL}, each packet, be it advertising or data, has the same maximum length and structure but the data part of the packet is filled depending on the type of packet that is sent. The data in an advertising packet is filled with AD Types which take up one byte, and the data for that AD Type which is of variable length. An incomplete list of these AD Types together with their definition is found below. A full list of AD Types together with their descriptions can be found on the Bluetooth website\footnote{\url{https://www.bluetooth.com/specifications/assigned-numbers/generic-access-profile}} and Bluetooth Core Specification.
 
 \begin{itemize}
 	\item {List of Service Class UUIDs (0x02 - 0x07): Helps with finding out the purpose of a device, can contain a complete or partial list of available services on the device.}
@@ -568,7 +568,7 @@ When looking at the adopted Bluetooth Low Energy profiles and services, as discu
 	\item{\textbf{Location and Proximity}: Find Me, Location and Navigation, Proximity, Indoor Positioning}
 \end{itemize}
 
-Of course, once we include non-adopted specifications, the list could go on forever with entries being added every day. For example, there's the ``Flower Power''\footnote{http://www.parrot.com/usa/products/flower-power/} device which measures your plant health by monitoring air temperature, soil temperature, soil moisture, soil electrical conductivity and more. It synchronizes with a smartphone that has the Flower Power application paired to the device and synchronizes the data to an online cloud at set intervals, where the data can then be queried with an API  (closed system as seen in figure \ref{fig:networkloops}). A lot of these services aren't included in the adopted specifications, so extending standard Bluetooth profiles with your own can greatly expand the possibilities of the technology. However, if the manufacturer doesn't release the specifications of their device, interoperability with existing apps or integrating that device in other apps will be made very hard.
+Of course, once we include non-adopted specifications, the list could go on forever with entries being added every day. For example, there's the ``Flower Power''\footnote{\url{http://www.parrot.com/usa/products/flower-power/}} device which measures your plant health by monitoring air temperature, soil temperature, soil moisture, soil electrical conductivity and more. It synchronizes with a smartphone that has the Flower Power application paired to the device and synchronizes the data to an online cloud at set intervals, where the data can then be queried with an API  (closed system as seen in figure \ref{fig:networkloops}). A lot of these services aren't included in the adopted specifications, so extending standard Bluetooth profiles with your own can greatly expand the possibilities of the technology. However, if the manufacturer doesn't release the specifications of their device, interoperability with existing apps or integrating that device in other apps will be made very hard.
 
 However, the Flower Power example isn't exactly the best Bluetooth Low Energy use case in existence. For example, what if there's a gardener who plants some of these devices in his/her customers' yards. If the customer isn't home for two weeks, then there's no cellphone to synchronize the data to and the gardener will have to come over to check if the plants need care either way. Some people in the community also thought this was a problem and made a NodeJS gateway application to run on a Raspberry PI or other computer but the product wasn't originally designed for this and the NodeJS gateway leaves a lot to be desired.
 
@@ -625,9 +625,9 @@ By all means, another device than the Nexus 5 could be used to make a gateway. I
 
 \subsection{Arduino 101 / Genuino 101}
 \label{subsec:arduino101}
-One of the most popular microcontrollers is the Arduino. For this use case, a Genuino 101\footnote{https://www.arduino.cc/en/Main/ArduinoBoard101} (in Europe, Arduino 101 in America) was used because it features an Intel Curie System on Chip. This Intel Curie module, amongst a 6 axis gyroscope and accelerator, features a Bluetooth Low Energy module which makes it ideal for fast prototyping since it is easy to create an application with the Arduino IDE without requiring a lot of set-up.
+One of the most popular microcontrollers is the Arduino. For this use case, a Genuino 101\footnote{\url{https://www.arduino.cc/en/Main/ArduinoBoard101}} (in Europe, Arduino 101 in America) was used because it features an Intel Curie System on Chip. This Intel Curie module, amongst a 6 axis gyroscope and accelerator, features a Bluetooth Low Energy module which makes it ideal for fast prototyping since it is easy to create an application with the Arduino IDE without requiring a lot of set-up.
 
-Besides the board, some additional modules and sensors were used to create an application. For this use case, a very simple application was made based on an existing Heart Rate Monitor application from Arduino\footnote{https://www.arduino.cc/en/Tutorial/Genuino101CurieBLEHeartRateMonitor}.
+Besides the board, some additional modules and sensors were used to create an application. For this use case, a very simple application was made based on an existing Heart Rate Monitor application from Arduino\footnote{\url{https://www.arduino.cc/en/Tutorial/Genuino101CurieBLEHeartRateMonitor}}.
 
 The adapted application monitors a rotary switch and if connected to a master, it will notify the master every second with the value of the switch. It reports this value through the standard defined Heart Rate service and Heart Rate Measurement characteristic. In a real scenario heart rate wouldn't be measured with a rotary switch, but since this is a prototype it is the easiest solution. To give the device an actuator as well as a sensor, a simple custom service and characteristic were made that just enable or disable a digital device by writing 0 or 1 to the characteristic. The source code of the adapted example can be found in the appendix.
 
@@ -635,11 +635,11 @@ The adapted application monitors a rotary switch and if connected to a master, i
 \label{subsec:flowerpower}
 In order to have a consumer device to test with, the Flower Power was used. This is a handy little gadget filled with sensors that connects to an application on a smartphone which monitors your plant. It notifies the user when the plant should be watered, if it needs to be moved because it has too little sunlight, if it is too hot or too cold or if its soil isn't fertile enough.
 
-This device features a lot of custom services and characteristics, so it is a very good test device to find out if it is viable to easily support these kind of devices as well. Luckily the Flower Power has good documentation available\footnote{http://developer.parrot.com/docs/flowerpower/FlowerPower-BLE.pdf} so that prevented a lot of reverse engineering and extra time and effort.
+This device features a lot of custom services and characteristics, so it is a very good test device to find out if it is viable to easily support these kind of devices as well. Luckily the Flower Power has good documentation available\footnote{\url{http://developer.parrot.com/docs/flowerpower/FlowerPower-BLE.pdf}} so that prevented a lot of reverse engineering and extra time and effort.
 
 \subsection{MetaWear CPRO}
 \label{subsec:metawearcpro}
-For the last device, a MetaWear CPRO from MbientLab\footnote{https://store.mbientlab.com/product/metawear-cpro/} was used. This is another device destined for prototyping and features a large range of sensors. On top of that, it also runs off a coin cell battery, is very small and even allows developers to write their own firmware or expand the board. It features a temperature sensor, light sensor, a 10 axis motion sensor (gyroscope, magnitude, barometer) and the MetaWear CPRO used for this thesis is also fitted with a buzzer.
+For the last device, a MetaWear CPRO from MbientLab\footnote{\url{https://store.mbientlab.com/product/metawear-cpro/}} was used. This is another device destined for prototyping and features a large range of sensors. On top of that, it also runs off a coin cell battery, is very small and even allows developers to write their own firmware or expand the board. It features a temperature sensor, light sensor, a 10 axis motion sensor (gyroscope, magnitude, barometer) and the MetaWear CPRO used for this thesis is also fitted with a buzzer.
 
 \section{Android programming}
 \label{sec:androidprogramming}
@@ -647,7 +647,7 @@ In this section, the most important parts in building a gateway for Android will
 
 \subsection{Bluetooth layer}
 \label{subsec:bluetoothlayer}
-As a starting point, the first goal is to get the Bluetooth layer working. In order to get a kick start, the Bluetooth group exposes an Application Accelerator\footnote{https://www.bluetooth.com/develop-with-bluetooth/developer-resources-tools/app-acc-2} that's very easy to use and provides a solid layer above the Android Bluetooth API, making Bluetooth more friendly to use.
+As a starting point, the first goal is to get the Bluetooth layer working. In order to get a kick start, the Bluetooth group exposes an Application Accelerator\footnote{\url{https://www.bluetooth.com/develop-with-bluetooth/developer-resources-tools/app-acc-2}} that's very easy to use and provides a solid layer above the Android Bluetooth API, making Bluetooth more friendly to use.
 
 However, it is still important to know how the Bluetooth API of Android works and it will save quite a bit of time down the road when debugging a problem.
 
@@ -667,7 +667,7 @@ First things first, the smartphone has to be registered as a gateway before bein
 
 Once this procedure is finished, the smartphone is an orphan in the platform and has to be claimed within 30 seconds before time-out. In order to check if the gateway has been registered, a POST request can be sent to the same URI and once the device has been claimed the response will contain the gateway id. It is a good idea to then save the gateway id on the device so the claim procedure doesn't have to take place every time the application starts. The gateway can then be used to add assets to the online platform. This can be done by sending a PUT request to \texttt{https://api.smartliving.io/device/\_deviceId\_/asset/\_assetId\_/}. The \texttt{deviceId} and \texttt{assetId} are variables that should be carefully chosen so when data is received, the device knows what to do with it. To easily identify where the data should flow, the \texttt{deviceId} is determined by the connected Bluetooth device's unique address. The \texttt{assetId} is a combination of the Bluetooth Service UUID and the Bluetooth Characteristic UUID.
 
-After adding assets, the only thing left is to send actual data. This is done using the MQTT protocol, though HTTP can be used but MQTT is the preferred method. The MQTT protocol is a machine-to-machine protocol optimized for small sensors and mobile devices, which makes it ideal for an Internet of Things infrastructure. It is basically a very simple publisher/subscriber client, where a publisher publishes data to a topic and a subscriber can listen to topics to get updates. So sending and receiving data from the platform can simply be done by sending data to the right topic and subscribing to the topic the client wants to get updates from, in this case all topics are subscribed to in order to receive all asset state updates. In order to make this communication easier, the Paho Java Client library\footnote{https://eclipse.org/paho/clients/java/} was used.
+After adding assets, the only thing left is to send actual data. This is done using the MQTT protocol, though HTTP can be used but MQTT is the preferred method. The MQTT protocol is a machine-to-machine protocol optimized for small sensors and mobile devices, which makes it ideal for an Internet of Things infrastructure. It is basically a very simple publisher/subscriber client, where a publisher publishes data to a topic and a subscriber can listen to topics to get updates. So sending and receiving data from the platform can simply be done by sending data to the right topic and subscribing to the topic the client wants to get updates from, in this case all topics are subscribed to in order to receive all asset state updates. In order to make this communication easier, the Paho Java Client library\footnote{\url{https://eclipse.org/paho/clients/java/}} was used.
 
 \subsection{User interface}
 \label{subsec:userinterface}
@@ -688,7 +688,7 @@ Once a device has been chosen, a new fragment opens with more information about 
 
 As with every technology, concerns arise once it starts to become popular. Internet of Things and Bluetooth Low Energy are no exception to this and have caused a fair bit of commotion.
 
-First of all is a big problem: security. There are numerous articles being written the last couple of years that would make you wonder if the Internet of Things is even worth it. To give a couple of examples, there is an Internet of Things search engine called Shodan\footnote{https://www.shodan.io/} which allows users to browse unsecured internet-enabled webcams, even baby monitors \citep{porup20162, stanislav2015}. Even the US Intelligence Community has placed Internet of Things on their watch list and believe it is a very big threat \citep{clapper2016}.
+First of all is a big problem: security. There are numerous articles being written the last couple of years that would make you wonder if the Internet of Things is even worth it. To give a couple of examples, there is an Internet of Things search engine called Shodan\footnote{\url{https://www.shodan.io/}} which allows users to browse unsecured internet-enabled devices such as webcams and even baby monitors \citep{porup20162, stanislav2015}. Even the US Intelligence Community has placed Internet of Things on their watch list and believe it is a very big threat \citep{clapper2016}.
 
 Two hackers have done something that might alarm even more people. They have succeeded in hacking an internet-enabled car, gaining control a lot of the car's functions \citep{greenberg2015}. To demonstrate this, the process was documented as a man was driving with an SUV on the highway with the hackers miles away with their laptops. They were able to blast the air conditioning, put pictures on the car display, turn on the radio, spray wind shield wiper fluid and they could even kill the engine of the car. It didn't stop there as they were even able to steer the car while it was in reverse and disable the brakes at low speeds. After this incident, about 1.4 million vehicles were recalled for a software update \citep{kessler2015}. Numerous other cars were also exposed for hackers like the Tesla Model S, certain BMW vehicles, Rolls-Royce vehicles and Mini vehicles \citep{hirsch2015}.
 
